[tool.poetry]
name = "TestEnv"
version = "0.1.0"
description = ""
authors = ["Wolfgang Brandenburger <wolfgang.brandenburger@koerber.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
